--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=SA_Lab05
+
+# Database
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/order_product?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.data.jpa.repositories.enabled=true
+spring.jpa.show-sql=true
+
+# ActiveMQ
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
