--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/order_product?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456789
+spring.jpa.hibernate.ddl-auto=none
 spring.data.jpa.repositories.enabled=true
 spring.jpa.show-sql=true
 
@@ -12,3 +13,11 @@ spring.jpa.show-sql=true
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+#Gmail SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=skyherobrine13092003@gmail.com
+spring.mail.password=oyfjumsqkmxijmbr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
